--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="page3.html">Safety Awareness</a></li>
           <li><a href="page4.html">Service Learning Individual</a></li>
           <li><a href="page5.html">Special Olympics Award</a></li>
-          <li><a href="page6.html">Emerging Advisor &amp; Advisor of the Year</a></li>
+          <li><a href="page6.html">Advisor of the Year Awards</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -130,7 +130,10 @@
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="" class="work-box"> <img src="images/blank.png" width="600px" height="600px">        </a> </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="" class="work-box"> <img src="images/blank.png" width="600px" height="600px">        </a> </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="" class="work-box"> <img src="images/blank.png" width="600px" height="600px">        </a> </div>
-<!--       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-5.jpg" class="work-box"> <img src="images/work-5.jpg" alt="">
+
+      <!-- We dont need this part ->
+      
+      <!--       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-5.jpg" class="work-box"> <img src="images/work-5.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -175,25 +178,25 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-6">
-        <div class="person"><img src="images/team-1.jpg" alt="" class="img-responsive">
+   <!- add the images that I sent to you ->     <div class="person"><img src="images/team-1.jpg" alt="" class="img-responsive">
           <div class="person-content">
             <h4>Cameron Forsythe</h4>
             <h5 class="role">Front End Developer</h5>
-            <p> </p>
+            <p>Hi, my name is Cameron Forsythe and I'm a senior at Pike High School. I am the captain of the robotics team here at pike and I am part of the coding aspect of the club. I am fluent in a few languages which include HTML and javascript. I am also involved in our Rugby team here and I am of course a part of Business Professionals of America. When I graduate college I plan to attend IUPUI and to pursue a Bachelor's in Computer Science. My ultimate dream is to one day be the CEO of my own company.</p>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
-        <div class="person"> <img src="images/team-2.jpg" alt="" class="img-responsive">
+     <!- add the images that I sent to you ->   <div class="person"> <img src="images/team-2.jpg" alt="" class="img-responsive">
           <div class="person-content">
             <h4>Daeyon McCann</h4>
             <h5 class="role">Creative head</h5>
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Hello, my name is Daeyon McCann and I am a Junior at Pike High School. I'm currently involved in many after school activites some of which include BPA and Boy's Varsity Soccer. I plan to go college after high school, although I'm not sure where yet. I want a career in computer science but I want to be on the creative side of things. </p>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
-        <div class="person"> <img src="images/team-3.jpg" alt="" class="img-responsive">
+   <!- add the images that I sent to you ->     <div class="person"> <img src="images/team-3.jpg" alt="" class="img-responsive">
           <div class="person-content">
             <h4>Dannie Vann</h4>
             <h5 class="role">Web Designer</h5>
@@ -203,7 +206,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
-        <div class="person"> <img src="images/team-4.jpg" alt="" class="img-responsive">
+     <!- add the images that I sent to you ->   <div class="person"> <img src="images/team-4.jpg" alt="" class="img-responsive">
           <div class="person-content">
             <h4>Jesus Manjarrez Flores</h4>
             <h5 class="role">Front End Developer</h5>
@@ -266,6 +269,7 @@
   </div>
 </section> -->
 <!-- Testimonials section --> 
+  <!-- I took off the testimonials page completely so we can get rid of this, don't get rid of the javascript though, I think that's connected to every page. -->
 
 <!-- contact section -->
 <section id="contact" class="section">
@@ -300,7 +304,7 @@
           <p>Copyright © 2015 Lexis Inc. All Rights Reserved. Created by Pike High School BPA 2017</p>
         </div>
   <!-- footer top --> 
-  
+  <!-- if you can fix the issue with how the page looks when you scroll then great, if not then it doesn't matter I gave up at this point -->
 </footer>
 <!-- Footer section --> 
 <!-- JS FILES --> 
